testdata/baselines/reference/submodule/compiler/importAnImport.errors.txt
importAnImport.ts(6,19): error TS2694: Namespace 'c' has no exported member 'a'.


==== importAnImport.ts (1 errors) ====
    module c.a.b {
        import ma = a;
    }
    
    module m0 {
        import m8 = c.a.b.ma;
                      ~
!!! error TS2694: Namespace 'c' has no exported member 'a'.
    }